[Ref]: SecurityConfig 클래스 수정 및 보안 설정 개선
- Swagger UI 및 API 문서 접근을 위한 경로 설정 변경
- CORS 설정 및 HTTP 요청 인가 규칙을 명확히 정의하여 보안 강화
- 비밀번호 암호화를 위한 PasswordEncoder Bean 등록 및 CORS 정책 적용
- 코드 가독성을 높이기 위한 주석 추가 및 불필요한 코드 제거